# FinanceLab

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.css  App.jsx  Appbackup.txt  Appbackup_1.txt  artificial_dati_import.json
src-tauri/: Cargo.toml  release.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
